<resources>
    <string name="app_name">آموزش الفبا برای دانشجو کوچولو</string>
    <string name="wellcome">بچه های گلم سلام، به جمع دانشجوهای کوچولوی برنامه ی ما خوش اومدین.بریم که به همراه هم الفبای فارسی رو یاد بگیریم و باسواد بشیم. </string>
    <string name="start_new">New</string>
    <string name="brush">New</string>
    <string name="erase">New</string>
    <string name="save">New</string>
    <string name="paint">New</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="a_page1">آ تشنه اش بود. رفت لب چشمه، آب بخورد. چشمه، خشک بود. رفت لب دریا، آب دریا شور بود.رفت کنار رودخانه، خم شد که آب بخورد، افتاد توی آب. </string>
    <string name="a_page2">آب، آ را با خودش برد. ماهی گیر، آ را دید. او را از آب گرفتو به خونه برد، داد دست بچه اش و گفت : ” بگیر… این هم آ که میخواستی! مواظب باش که دیگر گمش نکنی”! </string>
    <string name="a_page3">بچه، خوش حال شد .آ را گرفت .آ سردش بود. از سرما میلرزید. بچه آ را برد کنار آتش .آ گرم شد. بچه برایش آش درست کرد .آ آش را خورد. بعد هم توی دفتر مشق، کنار دوستانش خوابید. </string>
    <string name="b_page1">ب کوچولو نقطه اش را دوست نداشت. راه که میرفت، گیر میکرد به نقطه اش و می افتاد زمین.
یک روز رفت پیش قیچی و گفت :” چین و چین و چین … نقطه را بچین”!     
   </string>
    <string name="b_page2">قیچی، نقطه را چید .ب، بی نقطه شد. راحت و خوشحال دوید و رفت به مدرسه. نشست روی تخته سیاه و گفت: “سلام”!
    تخته سیاه گفت:  “تو دیگه کی هستی؟ تو هیچی نیستی”!
    ب بی نقطه، ناراحت شد. رفت و نشست روی دفتر مشق.
   </string>
    <string name="b_page3">دفتر گفت: “ تو دیگه کی هستی؟ تو هیچی نیستی”!
ب بی نقطه، خیلی ناراحت شد. داد زد : “ من ب هستم”!   
پاک کن گفت: “ نه، تو اشتباهی هستی!” و خواست که پاکش کند.   
   </string>
    <string name="b_page4">ب بی نقطه، ترسید. داد زد:  “کمک، کمک”…!
مداد سیاه آمد به کمکش . زود یک نقطه برایش گذاشت . ب شد مثل اولش.    
از خوشحالی داد زد: “ حالا دیدید؟… من ب هستم!… من ب هستم”!    
   </string>
    <string name="aa_page1">دو تا ا میخواستند با هم مسابقه بدهند. با هم یک، دو، سه گفتند و دویدند. این بدو، آن بدو… این بدو، آن بدو… تماشاچی ها دست زدند و گفتند :” بدو!…بدو”…! </string>
    <string name="aa_page2">هر دو تا ا تندتر دویدند. هر دو میخواستند اول بشوند.
تماشاچی ها باز هم دست زدند. سوت زدند و گفتند:”بدو!… بدو!… تندتر بدو”…!
      </string>
    <string name="aa_page3">هر دو تا ا تند و تند دویدند و دویدند تا به آخر مسابقه رسیدند. یکی زودتر رسید و یکی دیرتر. به برنده، یک کلاه جایزه دادند و شد اَ اول  و آن یکی هم شد ،   -َ  دوم. </string>
    <string name="d_page1">د، دهن باز و گرسنه بود. راه افتاد و رفت دنبال غذا.رسید به یک در. آن را قورت داد. بعد رسید به یک  دیوار .آن را هم قورت داد. بعد رسید به یک درخت.درخت را هم قورت داد بعد رسید به یک دارکوب. </string>
    <string name="d_page2">خواست او را هم قورت بدهد. اما دارکوب نوکش را باز کرد، باز باز …
د و دارکوب با هم دهن به دهن شدند. دعوایشان شد.وسط دعوا، درخته از دل د پرید بیرون. بعد دیوار پرید بیرون.   </string>
    <string name="d_page3">بعدش هم در پرید بیرون. دل د خالی شد .د از گرسنگی از حال رفت.
دارکوبه ترسید و گفت: “وای چی شد؟ من که کاری نکردم”!
     د ناله کرد و گفت: “وای، دلم”!
    </string>
    <string name="d_page4">دارکوب رفت و برای د دارو آورد .د گفت: “من که مریض نیستم! گرسنه ام”.
دارکوب رفت و یک دیگ پر از غذا آورد.د شکمو هر چه قدر که توانست خورد، بقیه اش را هم برد بچه ها پرخوری اصلا کار درستی نیست  موافقید؟
     </string>
    <string name="m_page1">م زیر درخت نشسته بود و بافتنی میبافت. کلاغی از راه رسید. روی شاخه ی درخت نشست و پرسید: “توی این هوای گرم، چرا بافتنی میبافی”؟ </string>
    <string name="m_page2">م لبخند زد و گفت: “بالآخره که هوا سرد میشود”!
کلاغ گفت:” وا… چه حرفها! و پرید و رفت .”
م باز هم بافت و بافت. سیبی از شاخه ی درخت کنده شد، افتاد روی دامن م و پرسید:
</string>
    <string name="m_page3">“توی این هوای گرم،کی لباس بافتنی می پوشد؟”
م لبخند زد و گفت: “بالآخره یکی پیدا میشود که بپوشد”!
سیب لپهای تپلش را باد کرد و گفت: “چه چیزها! و قل خورد و رفت.”
</string>
    <string name="m_page4">م باز هم بافت و بافت. باد از راه رسید. توی گوش م پیچید و گفت :” به به … چه قدر قشنگ میبافی ! خسته نباشی!برای کی میبافی؟” </string>
    <string name="m_page5">م‌	لپهایش قرمز شد. سرش را پایین انداخت و گفت:” برای م کوچولو، آخه من دارم مامان میشوم ”!
ژاکت کوچکی را که بافته بود توی دستهای باد گذاشت. باد هوهو هاها خندید و گفت:” مبارکه… مبارک”!
</string>
    <string name="m_page6">آفرین به تو دانشجوی کوچولو ! من بهت افتخار میکنم...</string>
    <string name="sin_page1">
س حوصلهاش سر رفته بود. دلش میخواست بازی کند. از خانه رفت بیرون.دوید و دوید تا به سر کوه رسید .
سر کوه، یک سنگ پشت را دید.
س به سنگ پشت گفت: “آهای سنگ پشت! </string>
    <string name="sin_page2">می آیی بازی کنیم؟” سنگ پشت گفت: “چه بازی؟…، س گفت:” بازی گردو … شکست!” سنگ پشت قبول کرد. </string>
    <string name="sin_page3">بازی شروع شد س گفت: ” گردو” سنگ پشت گفت :”شکستم… زدم دندانت را شکستم.” س داد زد: ” آی دندانم… وای دندانم”! </string>
    <string name="sin_page4">سنگ پشت هول شد. گفت:” تو خودت گفتی بازی کنیم!“  س گفت:” اما تو دندان من را شکستی”!
سنگ پشت گفت: “حالا گریه نکن. من خودم میبرمت دکتر. بپر روی سنگم بشین تا برویم”.
</string>
    <string name="sin_page5">س نشست روی سنگ پشت . سه سال و سه ماه و سه هفته و سه ساعت طول کشید تا به دکتر رسیدند. آن موقع س یک دندان دیگر در آورد. خندید و گفت:”برگردیم. دیگه دکتر نمی خواهم”. </string>
    <string name="sin_page6">عزیزم توواقعا داری بزرگ میشی. نمی تونم بگم چه قدرهیجان انگیز است برام!</string>
    <string name="oo_page1">بچه ها میخوام داستانی درباره میوه ها بهتون بگم بچه ها اون میوه ها که توی قطارمون بودن خیلی غصه داشتن و همشون غمگین بودن همونطوری که داشتن حرف میزدن و غصه میخوردن </string>
    <string name="oo_page2">یکیشون که سیب بودش رو به میوه ها کردو گفت چرا همش نارحتین و غصه میخورین
انگووووور گفت من خیلی ناراحتم چون بچه ها وقتی منو میخورن نصفمو میخورن و نصف دیگمو پرت میکنن سیب خیلی نارحت شدش
</string>
    <string name="oo_page3">بعد خرمالوووووو گفت سر منم همین کارو میارن یه گازم میگیرن بقیمو میندازن یه گوشه درحالی که میدونن من چقد مقوی و خوشمزه ام</string>
    <string name="oo_page4">آلوووو هم گفت منم اذیت میکنن کل میوه مو نمیخورن پرتم میکنن
سیب گفت شاید نمیدونن که باغبان برای اینکه شما بوجود بیایین چقد زحمت میکشه </string>
    <string name="oo_page5">یا نمیدونن که شما نعمت خدا هستین حالا من بهتون قول میدم که به بچه ها اینو توضیح بدم که شما چقد برای بوجود اومدنتون زحمت کشیده میشه طول میکشه و چقد مفید هستین برای رشد بچه ها که قوی بشن و مغزشون خوب کار بکنه ،میوه ها خیلی خوشحال شدن و از سیب تشکر کردن</string>
    <string name="oo_page6">تو بی نظیری  آفرین بچه ی باهوش و زرنگ</string>
    <string name="t_page1">تـ کوچولو خیلی تَـنبل بود .کارَش فَقَط خوردَن وَ خوابیدَن بود .نَنه ت که اَز دَسـتِ او خیلی خَسـتـه شُده بود، یِک روز به بازار رَفـت و مِقداری سیبِ دُرُشـت خَرید وَ آن ها را تا دَم دَرخانه شان چید </string>
    <string name="t_page2">وَقـتـی تـ کوچولو اَز خواب بیدار شُد، به دُنبالِ سیب ها اَز اُتـاق بیرون رَفـت و آن ها را یِکی یِکی بَرداشت تـا این که به کوچه رِسید .وقـتـی دوسـتـان تـ کوچولو او را دیدند با خوشحالی فریاد زدند</string>
    <string name="t_page3">تـ کوچولو بیا با هم بازی کنیم! آن روز به تـ کوچولو خیلی خوش گذشـت و تـصمیم گرفـت دیگر تـنبلی را کنار بگذارد. </string>
    <string name="t_page4">فرزند گلم تو یکی از بهترین هدیه های خدایی...</string>
    <string name="t_page5">واسه نمره درس نمی خونم، درس می خونم تا یاد بگیرم</string>
    <string name="t_page6">اگه این بار نتونستی نمره ی خوبی بگیری اشکالی نداره، می تونی دوباره امتحان کنی</string>
    <string name="r_page1">این دفعه توشهرک الفبا با حرفی میخواین آشنا بشین که اولین بار صداشو می شنویم و فقط به یه شکل نوشته میشه. بچه ها اون حرف ر هستش. </string>
    <string name="r_page2">دَر یِک جَنگَلِ پُـر دِرَخت مورچه وَ فیلی با هَم دوست شُده بودَند .یِک روز فیل دَر حالی که داشت فَـرار می کَـرد، به دوستَش مورچه رِسید .مورچه اَز فیل پُـرسید: دوستِ عَزیزَم چی شده، چِـرا فَـرار می کُنی؟</string>
    <string name="r_page3">" فیل با تـرس گُفت: اَز دَستِ شِکارچی ها !حالـا کُجا قایِم بِشَوَم؟!" مورچه با خود فِکـری کَـرد وَ با عَجَله گُفت: این که ناراحتی نَدارَد !فوری بیا پُشتِ مَن قایِم شو! "

 </string>
    <string name="r_page4">همه با شنیدن صدای مورچه زدن زیر خنده که عجب اعتماد به نفسی داره این مورچه کوچولو :)</string>
    <string name="r_page5">هیچ وقت نگو: ” نمی تونم ” همیشه بگو: ” سعیمو می کنم “</string>
    <string name="r_page6">یه روزی پاداش سخت تلاش کردنت رو می گیری</string>
    <string name="n_page1">ن‌	کوچولو جلو دوید و گفت: “ نان، نان! مامان، نان!”
مامان ن یک نان پخت و به او داد.ن کوچولو نان را خورد و دوباره گفت: “ نان، نان! مامان، نان!”
</string>
    <string name="n_page2">مامان ن هر چه نان پخت، ن کوچولو خورد.خمیر نان تمام شد. آتش تنور خاموش شد. اما ن کوچولو هنوز گرسنه بود. </string>
    <string name="n_page3"> مامان ن به ن کوچولو گفت: “ نان تمام شد. حالا بیا بغلم تا قصه ی نان را برایت بگویم.” ن کوچولو پرید بغل مامانش و گفت: “ بگو…بگو!”… </string>
    <string name="n_page4">مامان ن گفت:” یکی بود، یکی نبود .ن کوچولویی بود که همیشه به مامانش میگفت نان، نان !مامان، نان!” ن کوچولو قصه را شنید و زود خوابش برد، مثل همیشه. </string>
    <string name="n_page5">عزیزم توواقعا داری بزرگ میشی. نمی تونم بگم چه قدرهیجان انگیز است برام!</string>
    <string name="n_page6">هیچ وقت نگو: ” نمی تونم ” همیشه بگو: ” سعیمو می کنم</string>
    <string name="ei_page1">یه روز توی فرودگاه شهرک الفبا یه هواپیما روی زمین نشست. همه ی نشانه ها جمع شدن تا ببینن مسافرشون کیه؟!</string>
    <string name="ei_page2">چهار تا مسافر پیاده شدن همه از دیدنشون خوشحال شدن(ایـ یـ ی ای)</string>
    <string name="ei_page3">مسافر اول خودشو معرفی کرد و گفت من ایـ اول هستم و از ایران اومدم </string>
    <string name="ei_page4">مسافر دوم  همان یـ  وسط  یک کادوی شیک و زیبا  در دست داشت </string>
    <string name="ei_page5">مسافر سوم همان ی آخر چسبان با یک جعبه شیرینی از هواپیما پیاده شد </string>
    <string name="ei_page6"> و در نهایت  ای  آخرتنها در حالی که لباس سرمه ای تنش بود بعد از دوستانش و آخر از همه از هواپیما پیاده شد.همه ی نشانه ها بهشون خوش امد گفتن و همگی رفتن تا دور هم جمع بشن</string>
    <string name="z_page1">ر یک پسرخاله داشت درست شکل خودش و از بچگی باهم دوست و رفیق , فقط یکروز که باهم رفته بودند کوه پسر خاله رو یک زنبور نیش میزنه و از درد نیش ,یکباره پاش گیر میکنه میخوره زمین </string>
    <string name="z_page2">و اونجا بود که سرش میخوره به یک سنگ و ردش میمونه  ببینید ز شکل ر فقط یک نشانی بالای سرش هست. خب زنبوره صداش چه جوریه وز وز وز</string>
    <string name="z_page3">اسم پسرخاله ر هم ز هست که امروز اونو شناختین ببینید تو جدول خونش کجاست؟ بله کنار ر</string>
    <string name="z_page4">بله  (و)  خب ر و ز باهم میرفتند اخر هفته ها کوهنوردی و برای اینکه راحت تر از کوه بالا برن چی لازم داشتن!؟ بله یک عصا , توی شهرک کی عصا داشت؟
خب حالا ر با عصا رو بلد بودین چی میش!؟رو
حالا ز با و چی میشه؟زو
بکشین باهم زووووووووو
</string>
    <string name="z_page5"> بچه ی باهوش  ز  با ا  چی میشه؟؟ آفرین میشه زا</string>
    <string name="z_page6">یه روزی پاداش سخت تلاش کردنت رو می گیری آفرین که تلاش میکنی  </string>
    <string name="ea_page1">روزی روزگاری چهارتا خواهر در شهرک الفبا زندگی میکردند که اصلا از لحاظ ظاهری شبیه هم نبودند</string>
    <string name="ea_page2">ولی همیشه با هم همصدا بودن و هر کی میپرسید اسمت چیه میگفتند اِ هستم .چهار خواهر هم صدا تصمیم گرفتند تا هر کدوم با چند تا کلمه ی دیگه دوست بشن و اسم های دخترانه خوشگل درست کنند </string>
    <string name="ea_page3">اِ  اول با چند حرف دیگه دوست شد و اسم زیبای اِلناز رو درست کردند الناز همیشه توی مدرسه اول صف بود</string>
    <string name="ea_page4"> ِ- دوم با حرف های نـ د ا  دوست شد رفت زیر کلمه نـ  و اسم زیبای نِدا رو درست کردند </string>
    <string name="ea_page5"> ـه  آخر چسبان با همکاری چند حرف دیگه اسم زیبای ژاله رو ساختن ه آخر تنها  خیلی تنها شد خواهراش همه برا خودشون دوست پیدا کرده بودن و این تنها بود . </string>
    <string name="ea_page6">پسری از آنجا میگذشت که اسمش فرید بود گفت ه آخر چرا تنهایی؟ ه آخر داستان رو براش تعریف کرد فرید گفت تو میتونی با حروف من دوست بشی به شرطی که همیشه اخر صف باشی ه آخر تنها رفت آخر صف و اسم دخترانه ی فریده ساخته شد .فرید خوشحال شد و اسم خواهر کوچولوش رو گذاشت فریده</string>
</resources>