<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFCCCCCC"
    android:layoutDirection="ltr"
    tools:context=".Activity.ActivityPaint">
    <include layout="@layout/toolbar_3"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center|center"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/undo_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/start_new"
            android:src="@drawable/undo"/>
        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/brush"
            android:src="@drawable/pencil"/>
        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser"/>


    </LinearLayout>
    <com.p.alphabetforkids.DrawingView
        android:id="@+id/drawing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="3dp"
        android:background="@drawable/h_ei"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:tag="#FF660000"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF660000"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>
            <ImageButton
                android:tag="#FFFF0000"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFF0000"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>
            <ImageButton
                android:tag="#FFFF6600"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFF6600"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>
            <ImageButton
                android:tag="#FFFFCC00"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFFCC00"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>
            <ImageButton
                android:tag="#FF009900"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF009900"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>
            <ImageButton
                android:tag="#FF009999"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF009999"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>




        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:tag="#FF0000FF"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF0000FF"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>
            <ImageButton
                android:tag="#FF990099"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF990099"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>
            <ImageButton
                android:tag="#FFFF6666"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFF6666"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>
            <ImageButton
                android:tag="#8BC34A"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#8BC34A"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>
            <ImageButton
                android:tag="#FF787878"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF787878"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>
            <ImageButton
                android:tag="#FF000000"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF000000"
                android:onClick="paintClicked"
                android:contentDescription="@string/paint"
                tools:ignore="OnClick"
                android:src="@drawable/paint"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
